# GodCore

./: .gitignore  CONTRIBUTING.md  DEV_DIARY.md  LICENSE  README.md  launch_ngrok-UI.sh  run_llama.py  start_all.sh  stop_all.sh
.github/: FUNDING.yml
About Us/: Cover_Letter.docx  DEV_DIARY.md  FOUNDER_LOG.md  FOUNDER_STATEMENT.md  SECURITY.md
backend/: GPT_handler.py  MIS_handler.py  ask_monday_handler.py  launch_ngrok-UI.sh  router.py  run_llama.py  start_all.sh  stop_all.sh
backend/llama-cpp-python/: index.html  pyproject.toml
backend/llama-cpp-python/docker/open_llama/: hug_model.py
backend/llama-cpp-python/examples/: prompt_mistral.post
backend/llama-cpp-python/examples/low_level_api/: low_level_api_chat_cpp.py
backend/llama-cpp-python/examples/notebooks/: Batching.ipynb
backend/llama-cpp-python/llama_cpp/: _internals.py  llama.py  llama_chat_format.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  STRUCTURE.md
environment/: conda_env.yml  install.sh  requirements.txt  stop_all.sh
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html  site.webmanifest
frontend/src/: App.css  App.js  setupProxy.js
llama-cpp-python/: app.py  launch_mistralstack.sh  run_llama.py  style.css
llama-cpp-python/examples/batch-processing/: server.py
llama-cpp-python/llama_cpp/: llama_cpp.py
llama-cpp-python/tests/: test_llama.py  test_llama_chat_format.py
scripts/: ask_monday_handler.py  launch_ngrok-UI.sh  run_llama.py  start_all.sh  stop_all.sh
