[build-system]
requires = ["scikit-build-core[pyproject]>=0.9.2"]
build-backend = "scikit_build_core.build"

[tool.poetry]
name = "llama-cpp-python"
version = "0.3.8"
description = "Python bindings for the llama.cpp library"
authors = ["Andrei Betlen <abetlen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llama_cpp" }]
homepage = "https://github.com/abetlen/llama-cpp-python"
repository = "https://github.com/abetlen/llama-cpp-python"
documentation = "https://llama-cpp-python.readthedocs.io/en/latest/"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typing-extensions = ">=4.5.0"
numpy = ">=1.20.0"
diskcache = ">=5.6.1"
jinja2 = ">=2.11.3"
uvicorn = { version = ">=0.22.0", optional = true }
fastapi = { version = ">=0.100.0", optional = true }
pydantic-settings = { version = ">=2.0.1", optional = true }
sse-starlette = { version = ">=1.6.1", optional = true }
starlette-context = { version = ">=0.3.6,<0.4", optional = true }
PyYAML = { version = ">=5.1", optional = true }
pytest = { version = ">=7.4.0", optional = true }
httpx = { version = ">=0.24.1", optional = true }
scipy = { version = ">=1.10,<1.12", optional = true }
huggingface-hub = { version = ">=0.23.0", optional = true }
black = { version = ">=23.3.0", optional = true }
twine = { version = ">=4.0.2", optional = true }
mkdocs = { version = ">=1.4.3", optional = true }
mkdocstrings = { version = ">=0.22.0", extras = ["python"], optional = true }
mkdocs-material = { version = ">=9.1.18", optional = true }
docutils = { version = "<0.21", optional = true }

[tool.poetry.extras]
server = [
  "uvicorn",
  "fastapi",
  "pydantic-settings",
  "sse-starlette",
  "starlette-context",
  "PyYAML"
]
test = [
  "pytest",
  "httpx",
  "scipy",
  "fastapi",
  "sse-starlette",
  "starlette-context",
  "pydantic-settings",
  "huggingface-hub"
]
dev = [
  "black",
  "twine",
  "mkdocs",
  "mkdocstrings",
  "mkdocs-material",
  "pytest",
  "httpx"
]

[tool.scikit-build]
wheel.packages = ["llama_cpp"]
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"
sdist.include = [".git", "vendor/llama.cpp/*"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "llama_cpp/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "llama-cpp-python"
version = "0.3.8"
description = "Python bindings for the llama.cpp library"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Andrei Betlen", email = "abetlen@gmail.com" }
]
requires-python = ">=3.8,<3.11"
dependencies = []
